# infer-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: graph.py  report.py  simulation.py
backend/app/services/: entity_reader.py  graph_builder.py  graph_memory_updater.py  graph_tools.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py
backend/app/storage/: __init__.py  embedding_service.py  graph_storage.py  memory_storage.py  ner_extractor.py  search_service.py
backend/app/utils/: llm_client.py  logger.py  retry.py
backend/forward_testing/: __main__.py  cli.py  config.py  pipeline.py
backend/forward_testing/augmenter/: md_augmenter.py
backend/forward_testing/automation/: launchd_setup.py
backend/forward_testing/news/: aggregator.py  article_scraper.py  formatter.py  models.py
backend/forward_testing/results/: rolling_scorecard.json
backend/forward_testing/runner/: prediction_extractor.py  question_designer.py  simulation_runner.py
backend/forward_testing/scorer/: actuals_fetcher.py  scorecard.py
backend/scripts/: run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
backend/tests/forward_testing/: test_aggregator.py  test_config.py  test_fed_gov.py  test_formatter.py  test_gdelt.py  test_google_news.py  test_launchd.py  (+10 more)
(+112 files in other folders)
